css/style.css
/****** General ***********/
* {
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    font-weight: 400;
}

:root {
    --main-blue-color: #0065FC;
    --main-light-grey-color: #F2F2F2;
    --main-grey-color: #D9D9D9;
    --main-black-color: #000000;
    --filter-bg-color: #DEEBFF;
    --main-white-color: #FFFFFF;
}

body {
    display: flex;
    justify-content: center;
    margin: 0;
    min-width: 320px;
}

/** Container général header, main, footer**/
.main-container {
    width: 100%;
    max-width: 1440px;
    padding: 0 50px;
    box-sizing: border-box;
}

/** general provisoire **/
h1,
h2 {
    font-size: 22px;
    font-weight: 700;
}

h3 {
    font-weight: 700;
}

i {
    font-size: 18px;
}

input {
    font-size: 18px;
    font-weight: 700;
}

a {
    color: inherit;
    text-decoration: none;
}
/***** global carte ***********/
.card {
    background-color: var(--main-white-color);
    border-radius: 20px;
    padding: 5px;
    filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
}

.card img {
    object-fit: cover;
}

.card-title {
    font-size: 16px;
}

.card-subtitle {
    font-size: 14px;
}

.euro {
    font-weight: 700;
}

.fa-star {
    color: var(--main-blue-color);
}

.neutral-star {
    color: var(--main-light-grey-color)
}

/****** Header ***********/
header {
    display: flex;
    justify-content: space-between;
    height: 79px;
    margin-bottom: 28px;
}

.header-logo {
    display: flex;
    align-items: center;
}

.header-logo img {
    width: 61.09px;
    height: 19px;
}

.header-nav ul {
    display: flex;
    align-items: flex-start;
    gap: 68px;
    list-style: none;
}

.header-nav a {
    font-weight: 400;
}

.header-nav a:hover {
    text-decoration: underline;
    text-underline-offset: -31px;
    text-decoration-thickness: 2px;
    color: var(--main-blue-color);
}

/***** Main Section ***********/
.main-section{
    margin-bottom: 22px;
}

.main-title h1 {
    margin-bottom: -8px;
}
/** Formulaire de recherche **/
.search-container {
    display: flex;
    width: auto;
    height: 49px;
    margin: 35px 0px 35px 0px;
}

.search-label-icon {
    font-size: 18px;
}

.search-label {
    display: inline-flex;
    min-width: 50px;  
    justify-content: center;
    align-items: center;
    background-color: var(--main-light-grey-color);
    border-top-left-radius: 15px;
    border-bottom-left-radius: 15px; 
}

.search-input { 
    max-width: 195px;
    width: 100%;
    border: 1px solid var(--main-light-grey-color);
    border-right: none;
    text-align: center;
    font-size: 18px;
    font-weight: 700;
}

.search-input:focus {
    outline: none;
    border: 1px solid var(--main-grey-color);
    border-right: none;
}

.search-button {
    min-width:132px;
    background-color: var(--main-blue-color);
    color: var(--main-white-color);
    border: none;
    border-top-right-radius: 15px;
    border-bottom-right-radius: 15px;
}

.search-button-icon {
    font-size: 17px;
    display: none;
    font-weight: 700;
}

span.search-button-text {
    font-size: 18px;
    font-weight: 700;
}

/***** filtres de recherche ******/

.main-filters {
    display: flex;
    gap: 15px;
    margin-bottom:25px;
}

.filters-container {
    display: inline-flex;
    flex-wrap: wrap;
    gap: 15px;
}

.filter-button {
    display: inline-flex;
    height:50px;
    font-size: 17px;
    font-weight: 700;
    padding: 0px 17px;
    border: 2px solid var(--main-grey-color);
    background-color: var(--main-white-color);
    border-radius: 25px;
    align-items: center;
    gap: 10px;/* espace entre icone et texte */
}

.filter-button:hover {
    background-color: var(--filter-bg-color);
}

.filters-title {
    font-size: 18px;
}
.filter-icon {
    font-size: 22px;
    color: var(--main-blue-color);
}

/***** info resultat de recherche *****/

.result-info {
    display: flex;
    align-items: center;
    gap: 10px;
}

.info-icon {
    font-size: 10px;
    display: inline-block;
    border: 1px solid var(--main-grey-color);
    padding: 6px 9px 6px 9px;
    color: var(--main-blue-color);
    border-radius: 25px;
}
/****** Hebergements And Populaires ***********/
.hosting-and-popular {
    display: flex;
    justify-content: space-between;
}

.hosting-section , .popular-section {
    background-color: var(--main-light-grey-color);
    border-radius: 20px;
    padding: 30px;
    box-sizing: border-box;
}

.hosting-and-popular h2{
    margin: 0px;
}

/***** hosting section *****/
.hosting-section {
    width: 65%;
}

.hosting-cards{
    display: grid;
    grid-template:  1fr 1fr / 1fr 1fr 1fr;
    gap: 30px;
    margin: 33px 0;
}

.hosting-cards .card {
    display: flex;
    flex-direction: column;
}

.hosting-cards img {
    width: 100%;
    height: 114px;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}


.hosting-cards .card-content {
    display: flex;
    flex-direction: column;
    box-sizing: border-box;
    padding-left: 10px;
}

.hosting-cards .card-title {
    margin-top: 10px;
    margin-bottom: 8px;
}

.hosting-cards .card-subtitle {
    margin: 0;
}

.hosting-cards .card-rating {
    margin-bottom: 5px;
    margin-top: 3px;
}

.hosting-section a {
    font-size: 18px;
    font-weight: 700;
}
/**** Popular section *****/

.popular-section {
    width: 32%;
}

.popular-title {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.fa-chart-line {
    color: var(--main-blue-color);
}

.popular-cards{
    display: grid;
    grid-template: 1fr / 1fr;
    margin-top: 33px;
    gap: 30px;
}

.popular-cards .card {
    display: flex;
}

.popular-cards img {
    width: 33%;
    height: 136px;
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
}

.popular-cards .card-content {
    width: 67%;
    padding-left: 15px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    box-sizing: border-box;
}

.popular-cards .card-title {
    margin-top: 10px;
    margin-bottom: 4px;
}

.popular-cards .card-subtitle {
    margin: 0;
}

.popular-cards .card-rating {
    margin-bottom: 5px;
}
/***** Activity section ***********/
.activity-section{
    padding: 30px;
    width:100%;
    box-sizing: border-box;
}

.activity-section h2{
    margin: 0px;
}

.activity-cards{
    display: grid;
    grid-template: 1fr  / 1fr 1fr 1fr 1fr;
    gap: 30px;
    margin-top: 33px;
}

.activity-cards .card {
    display: flex;
    flex-direction: column;
    padding: 0;
}

.activity-cards img {
    height: 380px;
    width: 100%;
    border-top-left-radius: 20px;
    border-top-right-radius: 20px;
}
.activity-cards .card-title {
    margin: 20px 0 20px 19px; 
}


/***** Footer ***********/
footer {
    display: flex;
    background-color: var(--main-light-grey-color);
    padding-bottom: 20px;
}

.footer-section {
    width: 33.33%;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    padding-left: 20px;
}

.footer-section ul {
    list-style: none;
    padding: 0;
    margin:0;
    display: flex;
    gap: 15px;
    flex-direction: column;
}

.footer-section h3 {
    margin-top: 20px;
    font-size: 18px;
}
/****** Responsive ***********/
@media (max-width: 1024px) {

    .filters-title {
        margin-top: 0px;
    }
    .main-filters {
        flex-direction: column;
        gap: 5px;
    }
    .filter-button {
        font-size: 16px;
    }

    .hosting-and-popular {
        flex-direction: column;
    }

    .hosting-section {
        width: 100%;
    }

    .popular-section {
        width: 100%;
        margin-top: 50px;
    }

    .popular-cards {
        grid-template: 1fr / 1fr 1fr 1fr;
    }

    .popular-cards img {
        height: auto;
        min-height:136px;
    }

    .activity-cards img {
        height: 200px;
    }

}

/* Small devices (phones, less than 768px) */
@media (max-width: 767.98px) {
    /* ... */
    .main-container {
        width: 100%;
        max-width: 375px;
        padding: 0 0px;
    }

    /****** header adjustments ******/
    header {
        flex-direction: column;
        align-items: center;
        height:auto;
    }

    .header-logo {
        padding-top: 30px;
        padding-bottom: 30px;
    }

    .header-nav {
        width: 100%;
    }

    .header-nav ul {
        gap: 0px; 
        padding: 0;
        margin: 0;
        width: 100%;
    }
    
    .header-nav li {
        width: 50%;
        text-align: center;
        border-bottom: 2px solid var(--main-light-grey-color);
        padding-bottom: 15px;
    }

    .header-nav li:hover {
        border-bottom-color: var(--main-blue-color);
    }

    .header-nav a:hover {
        text-decoration: none;
    }

    /****** main section adjustments ******/
    .main-section {
        padding: 0 20px;
    }
    
    .search-button {      
        min-width: 49px; 
        border-radius: 15px;
        box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
    }
    .search-button-text {
        display: none;
    }
    
    .search-button-icon {
        display: contents;
    }
    .search-input {
        max-width: 100%;
        text-align: start;
        padding-left: 25px;
        margin-right: -10px;
    }

    .filters-container {
        display: grid;
        grid-template: 1fr 1fr / 1fr 1fr;
        gap: 20px 10px;
    }
    .filter-button {
        font-size: 14px;
        max-width: 162.5px;
    }  

    .hosting-and-popular {
        flex-direction: column-reverse;
    }

    .hosting-section , .popular-section { 
        border-radius: 0%;
        padding: 30px 20px;
    }

    .hosting-section {       
        background-color: var(--main-white-color);
    }
    
    .popular-section {
        margin-top:0;
    }

    .hosting-cards , .popular-cards , .activity-cards {
        grid-template: 1fr / 1fr;
        gap: 15px;
    }

    .popular-cards img {
        height: 136px;
    }

    .activity-cards img {
        height: 141px;
    }

    /****** footer adjustments ******/
    footer {
        flex-direction: column;
        gap: 20px;
    }

    .footer-section {
        width: 100%;
    }
}

